--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="/about.html" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="/gallery.html" class="nav-link">Gallery</a>
+                        <a href="gallery.html" class="nav-link">Gallery</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="/contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
 
                 </ul>
