--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="footer-copyright">
-                    <p>Website Developed by <a href="http://saelwebdesign.com">Sael Web Design</a></p>
+                    <p>Developed by <a href="https://saeldigitalagency.co.ke/">Sael Digital Agency</a></p>
                 </div>
             </div>
         </div>
